--- a/styles.css
+++ b/styles.css
@@ -11,11 +11,13 @@
 
 }
 .second-header{
-    height: 200px;
+    height: 100px;
     display: flex;
-    flex-direction: column;
-    align-content: flex-start;
+    flex-direction: row;
+    justify-content: center;
     padding-top: 10px;
+    gap: 50px;
+    
     
 
 }
@@ -67,10 +69,9 @@
 
 .second-header>:first-child{
     text-align: center;
-    font-size: xx-large;
     padding-top: 40px;
     color: white;
-    height: 50px;
+    
     background-color: #1f2937;
     
 }
@@ -78,7 +79,7 @@
     padding-top: 0px;
     color: white;
     flex: 1;
-    height: 80px;
+    
     
     
 }
@@ -109,9 +110,9 @@ li a {
 
 .header-image {
     border-radius: 5px;
-    height: 200px;
-    width: 200px;
-    transform: translate(220%, -80%);
+    height:200px;
+    max-width: 200px;
+    margin-top: 40px;
     
     
 }
